force-app/main/default/objects/Broker__c/fields/RW_Is_GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>RW_Is_GST_Applicable__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Is GST Applicable</label>
    <type>Checkbox</type>
</CustomField>