force-app/main/default/objects/Broker__c/fields/RW_Mobile_No__c.field-meta.xml
<CustomField>
    <fullName>RW_Mobile_No__c</fullName>
    <label>Mobile No.</label>
    <type>Phone</type>
</CustomField>