force-app/main/default/objects/Broker__c/fields/RW_NATURE_WORK__c.field-meta.xml
<CustomField>
    <fullName>RW_NATURE_WORK__c</fullName>
    <label>Nature Work</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Work</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>