force-app/main/default/objects/Broker__c/fields/RW_Proof_of_Income__c.field-meta.xml
<CustomField>
    <fullName>RW_Proof_of_Income__c</fullName>
    <label>Proof of Income</label>
    <length>255</length>
    <type>Text</type>
</CustomField>