force-app/main/default/objects/Broker__c/fields/RW_RERA_Registration_Number__c.field-meta.xml
<CustomField>
    <fullName>RW_RERA_Registration_Number__c</fullName>
    <label>RERA Registration Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>