force-app/main/default/objects/Broker__c/fields/SAP_CP_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_CP_Code__c</fullName>
    <label>SAP CP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>