force-app/main/default/objects/Broker__c/fields/Service_Tax_No__c.field-meta.xml
<CustomField>
    <fullName>Service_Tax_No__c</fullName>
    <label>Service Tax No</label>
    <length>50</length>
    <type>Text</type>
</CustomField>