force-app/main/default/objects/Broker__c/fields/State_2__c.field-meta.xml
<CustomField>
    <fullName>State_2__c</fullName>
    <label>State</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country_2__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>