force-app/main/default/objects/Broker__c/fields/STR_SUPPL2__c.field-meta.xml
<CustomField>
    <fullName>STR_SUPPL2__c</fullName>
    <label>Street Address 2</label>
    <length>100</length>
    <type>Text</type>
</CustomField>