force-app/main/default/objects/Broker__c/fields/STR_SUPPL3__c.field-meta.xml
<CustomField>
    <fullName>STR_SUPPL3__c</fullName>
    <label>Street Address 3</label>
    <length>100</length>
    <type>Text</type>
</CustomField>