force-app/main/default/objects/Broker__c/fields/STREET__c.field-meta.xml
<CustomField>
    <fullName>STREET__c</fullName>
    <label>Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>