force-app/main/default/objects/Broker__c/fields/TITLE__c.field-meta.xml
<CustomField>
    <fullName>TITLE__c</fullName>
    <label>Title</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0001</fullName>
                <label>Ms.</label>
            </value>
            <value>
                <fullName>0002</fullName>
                <label>Mr.</label>
            </value>
            <value>
                <fullName>0003</fullName>
                <label>Company</label>
            </value>
            <value>
                <fullName>0004</fullName>
                <label>Mr. and Mrs.</label>
            </value>
            <value>
                <fullName>0005</fullName>
                <label>M/S</label>
            </value>
            <value>
                <fullName>0006</fullName>
                <label>Mrs.</label>
            </value>
            <value>
                <fullName>0007</fullName>
                <label>Dr.</label>
            </value>
            <value>
                <fullName>0008</fullName>
                <label>CAPT.</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>