force-app/main/default/objects/Broker__c/fields/Unregistered_Channel_Partner__c.field-meta.xml
<CustomField>
    <fullName>Unregistered_Channel_Partner__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Unregistered Channel Partner</label>
    <type>Checkbox</type>
</CustomField>