force-app/main/default/objects/Broker__c/fields/Valid_competency_certificate__c.field-meta.xml
<CustomField>
    <fullName>Valid_competency_certificate__c</fullName>
    <formula>AND(ISPICKVAL( Latest_CC_Upload_Status__c , &apos;Approved&apos;), CC_Valid_till__c  &gt;= Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid competency certificate</label>
    <type>Checkbox</type>
</CustomField>