force-app/main/default/objects/Broker__c/fields/Valid_RERA_certificate__c.field-meta.xml
<CustomField>
    <fullName>Valid_RERA_certificate__c</fullName>
    <formula>AND(ISPICKVAL(Latest_RERA_Upload_Status__c, &apos;Approved&apos;),RERA_Valid_till__c &gt;= Today())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Valid RERA certificate</label>
    <type>Checkbox</type>
</CustomField>