force-app/main/default/objects/Broker__c/fields/Zone__c.field-meta.xml
<CustomField>
    <fullName>Zone__c</fullName>
    <label>Zone</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Locality__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Central Zone 1</fullName>
            </value>
            <value>
                <fullName>Central Zone 2</fullName>
            </value>
            <value>
                <fullName>Central Zone 3</fullName>
            </value>
            <value>
                <fullName>Kalyan Dombivali</fullName>
            </value>
            <value>
                <fullName>Navi Mumbai</fullName>
            </value>
            <value>
                <fullName>NRI</fullName>
            </value>
            <value>
                <fullName>Outstation</fullName>
            </value>
            <value>
                <fullName>South Bombay</fullName>
            </value>
            <value>
                <fullName>Thane and beyond</fullName>
            </value>
            <value>
                <fullName>Western Zone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>