force-app/main/default/objects/Broker__c/recordTypes/Temp_Channel_Partner.recordType-meta.xml
<RecordType>
    <fullName>Temp_Channel_Partner</fullName>
    <active>true</active>
    <description>Temporary CPs</description>
    <label>Temp Channel Partner</label>
</RecordType>