force-app/main/default/objects/Broker__c/validationRules/Broker_phone_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Broker_phone_validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(IF( RW_Mobile_No__c != null, NOT(REGEX(RW_Mobile_No__c , &quot;[0-9]{10,15}&quot;)), false)),
$Label.Disable_all_validations_from_booking == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>RW_Mobile_No__c</errorDisplayField>
    <errorMessage>Please enter a valid mobile no.</errorMessage>
</ValidationRule>