force-app/main/default/objects/Broker__c/validationRules/Is_NRI_CP.validationRule-meta.xml
<ValidationRule>
    <fullName>Is_NRI_CP</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Is_NRI_CP__c = false,ISBLANK(Broker_Pan_No__c),
$Label.Disable_all_validations_from_booking == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Broker_Pan_No__c</errorDisplayField>
    <errorMessage>Channel Partner Pan No cannot be blank</errorMessage>
</ValidationRule>