force-app/main/default/objects/Broker__c/validationRules/PAN_should_contain_uppercase_letters.validationRule-meta.xml
<ValidationRule>
    <fullName>PAN_should_contain_uppercase_letters</fullName>
    <active>true</active>
    <description>PAN number letters should be in uppercase only.</description>
    <errorConditionFormula>AND(Broker_Pan_No__c &lt;&gt; UPPER (Broker_Pan_No__c ) ,
$Label.Disable_all_validations_from_booking == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Broker_Pan_No__c</errorDisplayField>
    <errorMessage>PAN number letters should be in uppercase only.</errorMessage>
</ValidationRule>