force-app/main/default/objects/Broker__c/validationRules/Temp_CP_Creation_Email_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Temp_CP_Creation_Email_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(REGEX(RW_Email__c, &quot;^[^\\s@]+@[^\\s@]+\\.[^\\s@]+$&quot;)), RecordType.DeveloperName == &apos;Temp_Channel_Partner&apos;)</errorConditionFormula>
    <errorDisplayField>RW_Email__c</errorDisplayField>
    <errorMessage>Please enter a valid Email address in format: abc123@gmail.com</errorMessage>
</ValidationRule>