force-app/main/default/objects/Broker__c/validationRules/Temp_CP_Creation_Mobile_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Temp_CP_Creation_Mobile_Validation</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RecordType.DeveloperName = &quot;Temp_Channel_Partner&quot;,NOT(REGEX(RW_Mobile_No__c, &quot;^[1-9][0-9]{9}$&quot;)))</errorConditionFormula>
    <errorDisplayField>RW_Mobile_No__c</errorDisplayField>
    <errorMessage>Please enter a valid Mobile Number</errorMessage>
</ValidationRule>