force-app/main/default/objects/Broker__c/validationRules/Temp_CP_Creation_PAN_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Temp_CP_Creation_PAN_Validation</fullName>
    <active>false</active>
    <description>Temp CP Pan Creation Validation</description>
    <errorConditionFormula>AND(NOT(REGEX(Broker_Pan_No__c, &quot;^[A-Z]{5}[0-9]{4}[A-Z]$&quot;)), RecordType.DeveloperName == &apos;Temp_Channel_Partner&apos;)</errorConditionFormula>
    <errorDisplayField>Broker_Pan_No__c</errorDisplayField>
    <errorMessage>Please enter a valid PAN in format: ABCDE1234F</errorMessage>
</ValidationRule>