force-app/main/default/objects/Broker__c/validationRules/validate_GST_Registration_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_GST_Registration_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND(RW_Is_GST_Applicable__c, ISBLANK(RW_GST_Number__c))</errorConditionFormula>
    <errorDisplayField>RW_GST_Number__c</errorDisplayField>
    <errorMessage>Please fill up the GST Registration Number.</errorMessage>
</ValidationRule>