force-app/main/default/objects/Broker__c/validationRules/validate_pan_no.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_pan_no</fullName>
    <active>false</active>
    <errorConditionFormula>AND(NOT(ISBLANK( Broker_Pan_No__c )),NOT(REGEX(Broker_Pan_No__c ,&quot;[a-zA-Z0-9]{10}&quot;)))</errorConditionFormula>
    <errorDisplayField>Broker_Pan_No__c</errorDisplayField>
    <errorMessage>Please enter an valid pan number.</errorMessage>
</ValidationRule>