force-app/main/default/objects/Broker__c/validationRules/validate_proof_of_income.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_proof_of_income</fullName>
    <active>false</active>
    <errorConditionFormula>AND(!RW_Is_GST_Applicable__c, ISBLANK(RW_Proof_of_Income__c))</errorConditionFormula>
    <errorDisplayField>RW_Proof_of_Income__c</errorDisplayField>
    <errorMessage>Please fill up the Proof of Income.</errorMessage>
</ValidationRule>