force-app/main/default/objects/Broker__c/validationRules/validate_RERA_Registration_Number.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_RERA_Registration_Number</fullName>
    <active>false</active>
    <errorConditionFormula>AND(Is_NRI_CP__c = false,ISBLANK(RW_RERA_Registration_Number__c))</errorConditionFormula>
    <errorDisplayField>RW_RERA_Registration_Number__c</errorDisplayField>
    <errorMessage>RERA Registration Number. cannot be blank</errorMessage>
</ValidationRule>