force-app/main/default/objects/Broker__c/validationRules/validate_service_tax_no.validationRule-meta.xml
<ValidationRule>
    <fullName>validate_service_tax_no</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(  Service_Tax_No__c )),NOT(REGEX(Service_Tax_No__c ,&quot;[a-zA-Z0-9]{15}&quot;)),
$Label.Disable_all_validations_from_booking == &quot;false&quot; /*Added by Prashant to control disabling all validations together*/)</errorConditionFormula>
    <errorDisplayField>Service_Tax_No__c</errorDisplayField>
    <errorMessage>Please enter an valid service tax number.</errorMessage>
</ValidationRule>