force-app/main/default/objects/Broker__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Representative_Name__c</columns>
    <columns>RW_Mobile_No__c</columns>
    <columns>Address__c</columns>
    <columns>Broker_Pan_No__c</columns>
    <columns>RW_RERA_Registration_Number__c</columns>
    <columns>RW_GST_Number__c</columns>
    <columns>Activate_CP_Portal__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>Channel_Partner_From_CP_Portal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>