force-app/main/default/objects/Broker__c/listViews/Channel_Partner_From_CP_Portal.listView-meta.xml
<ListView>
    <fullName>Channel_Partner_From_CP_Portal</fullName>
    <columns>NAME</columns>
    <columns>SAP_CP_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Approval_Status__c</columns>
    <columns>Broker_Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Channel_Partner_From_CP_Portal__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Channel Partner From CP Portal</label>
</ListView>